panko-compiletest/src/snapshots/panko_compiletest__layout-panko__tests__cases__execute__typedef__test_shadow_typedef_in_inner_scope_with_value_and_initialiser.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/typedef/test_shadow_typedef_in_inner_scope_with_value_and_initialiser.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (declaration (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (function-definition
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (compound-statement
            (typedef name `int`)
            (compound-statement
               (definition (name~2 `long` @0) (sign-extend `long` @0 (negate `int` @8 (42 `int` @8))))
               (expression
                  (call `int` @8
                     (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                        (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
                     (noop-type-conversion `ptr<char const>` @24
                        (noop-type-conversion `ptr<char>` @24
                           (addressof `ptr<array<char; 5>>` @24
                              (string `array<char; 5>` @void "%ld\n\0"))))
                     (name~2 `long` @0))))
            (definition (x~3 `int` @0) (123 `int` @0))
            (expression
               (call `int` @4
                  (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                     (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
                  (noop-type-conversion `ptr<char const>` @16
                     (noop-type-conversion `ptr<char>` @16
                        (addressof `ptr<array<char; 4>>` @16
                           (string `array<char; 4>` @void "%d\n\0"))))
                  (x~3 `int` @0))))
         (definition (name~4 `int` @0) (42 `int` @0))
         (return (name~4 `int` @0)))))

----- stderr -----
