panko-compiletest/src/snapshots/panko_compiletest__layout-panko__tests__cases__execute__typedef__test_typedef_of_function_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/typedef/test_typedef_of_function_type.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (declaration (puts~0 `fn(∅: ptr<char const>) -> int` (static puts)) ∅)
   (typedef FunctionPtr `fn(∅: ptr<char const>) -> int`)
   (function-definition
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (definition (ptr~2 `ptr<fn(∅: ptr<char const>) -> int>` @0)
            (addressof `ptr<fn(∅: ptr<char const>) -> int>` @0
               (puts~0 `fn(∅: ptr<char const>) -> int` (static puts))))
         (expression
            (call `int` @8 (ptr~2 `ptr<fn(∅: ptr<char const>) -> int>` @0)
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 12>>` @16
                        (string `array<char; 12>` @void "hello world\0")))))))))

----- stderr -----
